--- a/codigo/estilos/armero.css
+++ b/codigo/estilos/armero.css
@@ -13,11 +13,12 @@ body {
     background: #000000;
 }
 html, body {
-    width: 100%;
-    height: 100%;
     margin: 0;
     padding: 0;
+    height: 100%;
+    overflow-x: hidden; /* no scroll horizontal */
 }
+
 
 body {
     background-image: url("/mnt/data/ef4596f0-8fe0-459f-ac63-89b39f31754f.png");
